2005-03-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (WinSetIcon): fix GCLP_ICONSM -> GCLP_HICONSM.

	* win/makefile.vc: clarify necessary defined vars that can come
	from MSVC or the Platform SDK.

2005-02-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinX.c (GenerateXEvent): correct %A translation on
	MouseWheel [Bug 1118340]

2005-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (FontMapLoadPage): swap decl of char arrays to
	avoid aligment issues in Tcl_UtfToExternal. [Bug 1122671]

	* unix/configure, unix/configure.in: add AC_C_BIGENDIAN check
	which defines WORDS_BIGENDIAN on BE machines.

2005-02-24  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSX.h: fixed incorrect inclusion of internal header.
	* macosx/tkMacOSXNotify.c: corrected included headers.

2005-02-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (Tk_GetSaveFileObjCmd, NavServicesGetFile):
	fixed encoding problems with -initialfile & -filetypes and
	corrected potential buffer overrun with -initialdir/-initialfile.
	[Bug 1146057]

2005-02-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/all.tcl: Add a [package require Tk] so that a missing
	display causes an early failure and keeps the error trace short.
	Issue observed in [FRQ 11122147], even though that's unrelated.

2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/panedwindow.tcl (::tk::panedwindow::Cursor): check
	window existence on delayed call. [Bug 949792]

	* doc/text.n: note 'image' key in 'dump' command. [Bug 1115907]

	* win/tkWinWm.c (TkWinGetIcon): fix toplevel retrieval for
	determining icon ref (potential crash). [Bug 1105738]

	* generic/tkCanvBmap.c (ConfigureBitmap, ComputeBitmapBbox): Fixed
	possible crash with disabled bmap and bbox handling [Bug 1119460]
	(BitmapToPostscript): made aware of various bitmap types
	(DisplayBitmap): remove unused fg/bgColor refs

2005-02-10  Jeff Hobbs  <jeffh@ActiveState.com>
